--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,3 @@
 REACT_APP_PUBLIC_FOLDER = http://localhost:8800/images/
+LOCAL_STORAGE_TOKEN_NAME = LOCAL_STORAGE_TOKEN_NAME
+API_URL = http://localhost:8800/api
