--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "cloudinary-core": "^2.11.4",
     "cloudinary-react": "^1.7.0",
     "react": "^17.0.2",
+    "react-cloudinary-upload-widget": "^1.4.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
